--- a/templates/index.html
+++ b/templates/index.html
@@ -3,25 +3,156 @@
 <head>
     <meta charset="utf-8">
     <title>Welcome to Goodwin Hall</title>
+
+	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+<div id="tooltip" class="hidden">
+    <p id="sid"></p>
+    <p id="power"></p>
+    <p id="frequency"></p>
+    <p id="floor"></p>
+    <p id="date"></p>
+</div>
+<div id="tooltip-sensor" class="hidden">
+	<p id="tooltip-sensor-id"></p>
+    <p id="tooltip-sensor-name"></p>
+    <p id="tooltip-sensor-bias_level"></p>
+    <p id="tooltip-sensor-orientation"></p>
+</div>
+<section class="header level1-font light-font">
+	<div class="title"><h2>Life of Goodwin Hall</h2></div>
+	<div class="navbar level2-font" role="navigation">
+		<select class="dropdown">
+		  <option value="current">Current</option>
+		  <option value="time-series">Timeseries</option>
+		</select>
+		<div class="filters">
+			<div id="time-range">Time Range: <input id="time-from" type="datetime-local" value="2017-12-02T13:00"/> - <input id="time-to" type="datetime-local"value="2017-12-02T13:30"/></div>
+			<div>Frequency Range: <input id="f-from" value="1" type="number"/> - <input id="f-to" value="128" type="number"/></div>
+			<div>Sensor ID: <input id="sensor-id" value="1" type="number"/></div>
+			<!-- <div id="submit" class="noselect">Live</div> -->
+			<div><button id="submit">Filter</button></div>
+		</div>
+	</div>
+</section>
+<section class="content">
+	<div id="building">
+		<div id="floor5">
+			<!-- <div class="floor-id">#5</div> -->
+			<svg id="5" width="100%" height="100%"></svg>
+		</div>
+		<div id="floor4">
+			<!-- <div class="floor-id">#4</div> -->
+			<svg id="4" width="100%" height="100%"></svg>
+		</div>
+		<div id="floor3">
+			<!-- <div class="floor-id">#3</div> -->
+			<svg id="3" width="100%" height="100%"></svg>
+		</div>
+		<div id="floor2">
+			<!-- <div class="floor-id">#2</div> -->
+			<svg id="2" width="100%" height="100%"></svg>
+		</div>
+		<div id="floor1">
+			<!-- <div class="floor-id">#1</div> -->
+			<svg id="1" width="100%" height="100%"></svg>
+		</div>
+	</div>
+	<div class="visualizations">
+		<div class="chart-type">
+			<div class="hmap">H-Map
+			</div>
+			<div class="bar">
+				B-Chart
+			</div>
+		</div>
+		<div class="colorLegend">
+		</div>
+		<span id="x-axis-heatmap">Sensor Id</span>
+		<div class="upper-viz">
+			<svg id="hmap-svg" width="100%" height="100%"></svg>
+			<svg id="bar-svg" width="100%" height="100%" ></svg>
+		</div>
+
+		<div class="lower-viz">
+			<div class="slider">
+				<div id="sliderFrom">From Sensor ID</div>
+				<div id="sliderTo">To Sensor ID</div>
+			</div>
+			<svg id="streamgraph-svg" width="100%" height="100%"></svg>
+		</div>
+	</div>
+	<div class="timeseries">
+		<svg id="times-series-svg" width="100%" height="100%"></svg>
+	</div>
+</section>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script src="https://unpkg.com/d3-3d/build/d3-3d.min.js"></script>
+<script src="https://d3js.org/d3-fetch.v1.min.js"></script>
+<script src="https://d3js.org/d3-timer.v1.min.js"></script>
+<script src="https://d3js.org/d3-scale.v2.min.js"></script>
+<script src="https://unpkg.com/d3-simple-slider/build/d3-simple-slider.js"></script>
+<script type="text/javascript" src="/js/barchart.js"></script>
+<script type="text/javascript" src="/js/stream.js"></script>
+<script type="text/javascript" src="/js/timeseries.js"></script>
+<script type="text/javascript" src="/js/script.js"></script>
+
+</body>
+</html>
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Welcome to Goodwin Hall</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 <h2>Life of a Building</h2>
-<div id="building">
-	<div id="floor1">
-		<svg width="500" height="400"></svg>
+<div class="content">
+	<div id="tooltip" class="hidden">
+	    <p id="sid"></p>
+	    <p id="power"></p>
+	    <p id="frequency"></p>
 	</div>
-	<div id="floor2">
-		<svg width="500" height="400"></svg>
+	<div id="building">
+		<div id="floor4">
+			<svg id="4" width="350" height="200"></svg>
+		</div>
+		<div id="floor3">
+			<svg id="3" width="350" height="200"></svg>
+		</div>
+		<div id="floor2">
+			<svg id="2" width="350" height="200"></svg>
+		</div>
+		<div id="floor1">
+			<svg id="1" width="350" height="200"></svg>
+		</div>
 	</div>
-	<div id="floor3">
-		<svg width="500" height="400"></svg>
-	</div>
-	<div id="floor4">
-		<svg width="500" height="400"></svg>
+	<div id="chart" style='overflow:auto;'>
+		<svg width="960" height="500"></svg>
 	</div>
 </div>
-<script src="https://d3js.org/d3.v4.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script src="https://unpkg.com/d3-3d/build/d3-3d.min.js"></script>
+<script src="https://d3js.org/d3-fetch.v1.min.js"></script>
+<script src="https://d3js.org/d3-timer.v1.min.js"></script>
+<script src="https://d3js.org/d3-scale.v2.min.js"></script>
 <script type="text/javascript" src="/js/script.js"></script>
+
 </body>
 </html>
+
+
+ -->
