--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,103 +1,272 @@
-.pure-material-button-contained {
-    position: relative;
-    display: inline-block;
+body {
+    font: 12px;
+    font-family: 'Roboto', sans-serif;
+    height: 100% !important;
+    width: 100% !important;
+    padding-top: 0px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+    margin-top: 0px !important;
+    background-color: #212123;
+}
+
+.header {
+  height: 5vh;
+}
+
+.header h2 {
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  color: white
+}
+
+.content {
+    height: 85vh;
+}
+
+#v1,#v2-parent,#v3-parent {
+    width: 100%;
+}
+
+#v1 {
+    height: 25%;
     box-sizing: border-box;
-    border: none;
-    border-radius: 4px;
-    padding: 0 16px;
-    min-width: 64px;
-    height: 30px;
-    vertical-align: middle;
+    padding-left: 40px;
+    padding-right: 40px;
+    display: flex;
+    flex-direction: row;
+
+}
+
+#v2-parent {
+    height: 45%;
+}
+
+#v3-parent {
+    height: 30%;
+}
+
+#v2,#v3 {
+    height: 100%;
+
+}
+
+.floor {
+    height: 100%;
+    flex-grow: 1;
+}
+
+.axis-label {
+    font-size: 0.75em;
+    font-weight: lighter;
+    font-family: 'Helvetica Neue', sans-serif;
+}
+
+.axis line{
+  stroke: white;
+}
+
+.axis path{
+  stroke: white;
+}
+
+.axis text {
+  font-family: 'Helvetica Neue', sans-serif;
+  font-weight: lighter;
+}
+
+.interaction {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    pointer-events: none;
+}
+
+#tooltip {
+    position: absolute;
+    width: auto;
+    height: auto;
+    padding: 10px;
+    background-color: white;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4); 
+    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4); 
+    pointer-events: none;
+}
+
+.hidden {
+    display: none;
+}
+
+#tooltip p { margin: 0;
+    font-family: sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    z-index: 4;
+}
+
+.highlight{
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border: dashed 0.5px;
+    margin-top: 5px;
+    pointer-events: none;
+}
+
+.zoom-view {
+    top: 0px;
+    right: 0px;
+    position: absolute;
+    width: 20px;
+    height: 50px;
+}
+
+.zoom-in, .zoom-out {
+    margin-top: 5px;
+    font-weight: lighter;
+    margin-bottom: 5px;
     text-align: center;
-    text-overflow: ellipsis;
-    text-transform: uppercase;
-    color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
-    background-color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-    font-family: var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 30px;
-    overflow: hidden;
-    outline: none;
-    cursor: pointer;
-    transition: box-shadow 0.2s;
+    font-size: 18px; 
+    color: white;  
 }
 
-.pure-material-button-contained::-moz-focus-inner {
-    border: none;
+.selection-buttons button {
+    margin: 5px;
 }
 
-/* Overlay */
-.pure-material-button-contained::before {
-    content: "";
+.export-view {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
-    opacity: 0;
-    transition: opacity 0.2s;
+    top: 25%;
+    left: 25%;
+    width: 50%;
+    height: auto;
+    border: solid 1px;
+    border-radius: 10px;
+    background-color: white;
 }
 
-/* Ripple */
-.pure-material-button-contained::after {
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    border-radius: 50%;
-    padding: 50%;
-    width: 32px; /* Safari */
-    height: 32px; /* Safari */
-    background-color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
-    opacity: 0;
-    transform: translate(-50%, -50%) scale(1);
-    transition: opacity 1s, transform 0.5s;
+.export-view>h4 {
+    width: 100%;
+    text-align: center;
+    opacity: 1;
+
 }
 
-/* Hover, Focus */
-.pure-material-button-contained:hover,
-.pure-material-button-contained:focus {
+.export-view>p {
+    width: 100%;
+    text-align: center;
+}
+
+.export-view>div {
+    width: 100%;
+    text-align: center;
+}
+
+.export-view>div>button {
+    margin: 5px;
+}
+
+/* Navigation menu styles*/
+.navbar {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 10vh;
+    font-family: 'Roboto', sans-serif;
+    color: white;
+    background-color: rgb(33, 150, 243);
+}
+.nav-right, .nav-left {
+    flex-grow: 1;
+    display: flex;
+}
+
+.nav-left {
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 40px;
+}
+
+.nav-right {
+    justify-content: flex-end;
+    margin-right: 40px;
+}
+
+.brand {
+    border: solid 1px;
+    border-radius: 5px;
+    min-width: 80px;
+    height: 50px;
+    text-align: center;
+    font-size: 20px;
+    color: white;
+    /*box-shadow: 0 0 14px rgba(0, 0, 0, 0.24), 0 14px 28px rgba(0, 0, 0, 0.48);*/
+}
+
+.brand p {
+    line-height: 50px;
+    margin: 0px;
+    text-align: center;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: white;
+}
+
+.navbar p {
+    line-height: 50px;
+}
+
+.dash-name {
+    font-size: 20px;
+    margin-left: 20px;
+}
+
+#data-export, #undo-selection {
+    width: 40px;
+    text-align: center;
+}
+
+#data-export:hover, #undo-selection:hover, #viz-type:hover, #refresh-interval:hover {
+    /*opacity: 0.5;*/
     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
 }
 
-.pure-material-button-contained:hover::before {
-    opacity: 0.08;
+#viz-type {
+    width: 150px;
+    display: flex;
+    align-items: center;
+    margin: 0px;
+    margin-left: 5px
 }
 
-.pure-material-button-contained:focus::before {
-    opacity: 0.24;
+#refresh-interval {
+    width: 120px;
+    text-align: center;
 }
 
-.pure-material-button-contained:hover:focus::before {
-    opacity: 0.3;
+.nav-dropdown-body {
+    height: 50px;
 }
 
-/* Active */
-.pure-material-button-contained:active {
-    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.pure-material-button-contained:active::after {
-    opacity: 0.32;
-    transform: translate(-50%, -50%) scale(0);
-    transition: transform 0s;
-}
-
-/* Disabled */
-.pure-material-button-contained:disabled {
-    color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
-    background-color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.12);
-    box-shadow: none;
-    cursor: initial;
-}
-
-.pure-material-button-contained:disabled::before {
-    opacity: 0;
-}
-
-.pure-material-button-contained:disabled::after {
-    opacity: 0;
+.nav-dropdown select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border: 0px;
+    height: 100%;
+    background-color: rgb(33, 150, 243);
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
 }
