--- a/web/css/style.css
+++ b/web/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .content {
-    height: 85vh;
+    height: 90vh;
 }
 
 #v1,#v2-parent,#v3-parent {
@@ -73,9 +73,16 @@ body {
   stroke: white;
 }
 
-.axis text {
+.axis text, .title text {
   font-family: 'Helvetica Neue', sans-serif;
   font-weight: lighter;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
 }
 
 .interaction {
@@ -270,3 +277,22 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 1em;
 }
+
+#query {
+    box-sizing: border-box;
+    width: 100%;
+    height: 10vh;
+    border: solid 1 px white;
+    padding: 5px;
+}
+
+#raw, #psd {
+    box-sizing: border-box;
+    width: 100%;
+    height: 35vh;
+}
+
+#psd {
+    margin-top: 30px;
+}
+
