added floorwise vizualization and interaction

--- a/templates/floorwise.html
+++ b/templates/floorwise.html
@@ -10,19 +10,17 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-	<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-slider.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/button-style.css"/>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
 	<div class="loader hidden"></div>
 	<div id="tooltip" class="hidden">
-		<p><span id="key"></span></p>
-		<p><span id="value1"></span></p>
-		<p><span id="value2"></span></p>
-		<p><span style="width: 100%;align-text:center; font-size:0.75em">Click to select</span></p>
+		<p><span id="playback-time"></span></p>
 	</div>
 	<div class="alert alert-danger hidden" role="alert">
  		Invalid query!
@@ -65,8 +63,16 @@
 	<section class="content">
 		<div id="query" class="container">
 			<div class="row">
-				<div class="col-sm-2">
-					<input type="text" class="form-control" id="sensor_name" placeholder="Sensor Name" value="" >
+				<div id="select-floor" onchange="floorSelected();" class="nav-dropdown col-sm-2" id="floor-number" title="Select floor number">
+					<div class="nav-dropdown-body" style="height: inherit; width: 100%;">
+						<select id="select-floor-number" style="height: inherit; width: 100%; padding-left: 10px;">
+							<option value="1">Floor 1</option>
+							<option value="2">Floor 2</option>
+							<option value="3">Floor 3</option>
+							<option value="4">Floor 4</option>
+							<option value="5">Terrace</option>
+						</select>
+					</div>
 				</div>
 				<div class="col-sm-4">
 					    <div class="input-group date form_datetime" data-date="2019-02-16T20:45:32Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input_1">
@@ -89,19 +95,41 @@
 				</div>
 			</div>
 		</div>
-		<div id="psd"></div>
-		<div id="raw"></div>
+
+		<div id="playback" class="container">
+			<div class="row" style="height: inherit;">
+				<div class="col-sm-10" id="playback-svg" style="height: inherit;">
+					
+				</div>
+				<div id="floorwise-play" class="col-sm-2 hidden play-pause" style="color: white; height: inherit;">
+					<i class="fa fa-play"></i>
+				</div>
+				<div id="floorwise-pause" class="col-sm-2 play-pause" style="color: white; height: inherit;">
+					<i class="fa fa-pause"></i>
+				</div>
+			</div>
+		</div>
+		<div class="container" style="height: 70vh;">
+			<div class="row" style="height:100%;">
+				<div id="floor" class="col-4" style="height:100%; padding:0px;"></div>
+				<div id="floor-sensor-psd" class="col-8" style="height:100%; padding:0px;"></div>
+			</div>
+		</div>
 	</section>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
+<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script type="text/javascript" src="js/bootstrap-datetimepicker.min.js"></script>
+<script type="text/javascript" src="js/bootstrap-slider.min.js"></script>
 <script type="text/javascript" src="js/helper.js"></script>
-<script type="text/javascript" src="js/exploration.js"></script>
+<script type="text/javascript" src="js/floorwise.js"></script>
 <script type="text/javascript" src="js/interaction.js"></script>
 
 <script type="text/javascript">
-function fetchExplorationData(sensor, start_date, end_date) {
-	var api = "http://128.173.25.223/api/explore/"+sensor+"?from="+start_date+"&to="+end_date;
+
+function fetchFloorPSD(floor_num, start_date, end_date) {
+	var api = "http://128.173.25.223/api/floor/psd/"+(floor_num)+"?from="+start_date+"&to="+end_date;
+	// var api = "http://128.173.25.223/api/explore/"+sensor+"?from="+start_date+"&to="+end_date;
 	d3.select('.loader').classed('hidden', false);
 	d3.json(api).then(function(response) {
 		if(response['msg']==='error') {
@@ -110,21 +138,29 @@ function fetchExplorationData(sensor, start_date, end_date) {
 		}
 		else
 			d3.select('.alert').classed('hidden', true);
-    	var exploration_data=response;
-    	drawExploration(exploration_data);
+		startFloorwiseStreaming(response);
     	d3.select('.loader').classed('hidden', true);
     }).catch(function(error) {
+    	console.log(error);
 		d3.select('.alert').classed('hidden', false);
 		d3.select('.loader').classed('hidden', true);
     });
 }
 
+function onFetchButtonClicked() {
+    var floor_select = document.getElementById('select-floor-number');
+    var selected = floor_select.options[floor_select.selectedIndex];
+    var floor_selected = selected.value;
+    var start_date = d3.select('#dtp_input_1').attr('value');
+    var end_date = d3.select('#dtp_input_2').attr('value');
+    if(start_date===undefined || start_date==="" || end_date===undefined || end_date==="")
+    	return
+    fetchFloorPSD(floor_selected, start_date, end_date);
+}
+
 d3.select('#explore-fetch')
     .on('click', function() {
-        var sensor = d3.select('#sensor_name').property('value');
-        var start_date = d3.select('#dtp_input_1').attr('value');
-        var end_date = d3.select('#dtp_input_2').attr('value');
-        fetchExplorationData(sensor, start_date, end_date);
+    	onFetchButtonClicked();
     });
 </script>
 </body>
