--- a/web/css/style.css
+++ b/web/css/style.css
@@ -65,13 +65,6 @@ body {
     font-family: 'Helvetica Neue', sans-serif;
 }
 
-.axis line{
-  stroke: white;
-}
-
-.axis path{
-  stroke: white;
-}
 
 .axis text, .title text {
   font-family: 'Helvetica Neue', sans-serif;
@@ -81,7 +74,7 @@ body {
 .axis path,
 .axis line {
   fill: none;
-  stroke: #000;
+  stroke: #fff;
   shape-rendering: crispEdges;
 }
 
@@ -124,7 +117,7 @@ body {
     position: absolute;
     width: 10px;
     height: 10px;
-    border: dashed 0.5px;
+    border: dashed 0.5px white;
     margin-top: 5px;
     pointer-events: none;
 }
@@ -282,7 +275,6 @@ body {
 #query {
     box-sizing: border-box;
     width: 100%;
-    height: 10vh;
     border: solid 1 px white;
     padding: 5px;
 }
@@ -295,6 +287,12 @@ body {
 
 #psd {
     margin-top: 30px;
+}
+
+#playback {
+    box-sizing: border-box;
+    height: 80px;
+    width: 100%;
 }
 
 
@@ -322,3 +320,28 @@ body {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+
+#playback {
+    box-sizing: border-box;
+    height: 10vh;
+    width: 100%;
+}
+#floor, #floor-sensor-psd {
+    box-sizing: border-box;
+}
+
+
+#floor-number, #explore-fetch {
+    height: 38px;
+    width: 60px;
+}
+
+#play-progress {
+    width: 100%;
+}
+
+.slider .tooltip {
+    opacity: 1 !important;
+}
+
