--- a/templates/floorwise.html
+++ b/templates/floorwise.html
@@ -55,7 +55,7 @@
 				</div>
 			</div>
 			<div id="refresh-interval">
-				<p><a href="javascript:void(0);" onclick="onrefreshintervalclick()"><i class="fa fa-redo"></i> Every 5 sec</a></p>
+				<p><a href="javascript:void(0);" onclick="onrefreshintervalclick()"><i class="fa fa-redo"></i> Every 4 sec</a></p>
 			</div>
 		</div>
 	</div>
@@ -75,7 +75,7 @@
 					</div>
 				</div>
 				<div class="col-sm-4">
-					    <div class="input-group date form_datetime" data-date="2019-02-16T20:45:32Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input_1">
+					    <div class="input-group date form_datetime" data-date="2019-02-19T07:00:00Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input_1">
 					        <input class="form-control" size="16" type="text" value="" readonly placeholder="From Time">
 					        <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
 							<span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
@@ -83,7 +83,7 @@
 						<input type="hidden" id="dtp_input_1" value="" /><br/>
 				</div>
 				<div class="col-sm-4">
-					    <div class="input-group date to_datetime" data-date="2019-02-16T20:45:32Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input_2">
+					    <div class="input-group date to_datetime" data-date="2019-02-19T07:00:04Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input_2">
 					        <input class="form-control" size="16" type="text" value="" readonly placeholder="To Time">
 					        <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
 							<span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
@@ -101,12 +101,12 @@
 				<div class="col-sm-10" id="playback-svg" style="height: inherit;">
 					
 				</div>
-				<div id="floorwise-play" class="col-sm-2 hidden play-pause" style="color: white; height: inherit;">
+<!-- 				<div id="floorwise-play" class="col-sm-2 hidden play-pause" style="color: white; height: inherit;">
 					<i class="fa fa-play"></i>
 				</div>
 				<div id="floorwise-pause" class="col-sm-2 play-pause" style="color: white; height: inherit;">
 					<i class="fa fa-pause"></i>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="container" style="height: 70vh;">
