--- a/templates/index.html
+++ b/templates/index.html
@@ -56,14 +56,14 @@
 				</div>
 			</div>
 			<div id="refresh-interval">
-				<p><a href="javascript:void(0);" onclick="onrefreshintervalclick()"><i class="fa fa-redo"></i> Every 5 sec</a></p>
+				<p><a href="javascript:void(0);" onclick="onrefreshintervalclick()"><i class="fa fa-redo"></i> Every 4 sec</a></p>
 			</div>
 		</div>
 	</div>
 
 
 	<!-- </section> -->
-	<section class="content">
+	<section class="content container">
 		<div id="v1">
 			<!-- <div class="v1 highlight hidden"></div> -->
 			<div class="floor first"></div>
