--- a/web/css/style.css
+++ b/web/css/style.css
@@ -60,14 +60,15 @@ body {
 }
 
 .axis-label {
-    font-size: 0.75em;
     font-weight: lighter;
-    font-family: 'Helvetica Neue', sans-serif;
+    /*font-family: 'Helvetica Neue', sans-serif;*/
+    font-family: 'Roboto', sans-serif;
 }
 
 
 .axis text, .title text {
-  font-family: 'Helvetica Neue', sans-serif;
+  /*font-family: 'Helvetica Neue', sans-serif;*/
+  font-family: 'Roboto', sans-serif;
   font-weight: lighter;
 }
 
@@ -282,7 +283,7 @@ body {
 #raw, #psd {
     box-sizing: border-box;
     width: 100%;
-    height: 35vh;
+    height: 50vh;
 }
 
 #psd {
