--- a/templates/index.html
+++ b/templates/index.html
@@ -98,11 +98,11 @@
 <script src="https://d3js.org/d3-color.v1.min.js"></script>
 <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script type="text/javascript" src="js/helper.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
-<script type="text/javascript" src="js/v1.js"></script>
-<script type="text/javascript" src="js/v2.js"></script>
-<script type="text/javascript" src="js/v3.js"></script>
-<script type="text/javascript" src="js/interaction.js"></script>
+<script type="text/javascript" src="js/commons.js"></script>
+<script type="text/javascript" src="js/dashboard-interaction.js"></script>
+<script type="text/javascript" src="js/dashboard-floor-viz.js"></script>
+<script type="text/javascript" src="js/dashboard-spectrum-viz.js"></script>
+<script type="text/javascript" src="js/dashboard-timeseries-viz.js"></script>
+<script type="text/javascript" src="js/dashboard.js"></script>
 </body>
 </html>
