fixed a bug in floorwise viz

--- a/templates/floorwise.html
+++ b/templates/floorwise.html
@@ -63,7 +63,7 @@
 	<section class="content">
 		<div id="query" class="container">
 			<div class="row">
-				<div id="select-floor" onchange="floorSelected();" class="nav-dropdown col-sm-2" id="floor-number" title="Select floor number">
+				<div id="select-floor" onchange="FloorwiseViz.floorSelected();" class="nav-dropdown col-sm-2" id="floor-number" title="Select floor number">
 					<div class="nav-dropdown-body" style="height: inherit; width: 100%;">
 						<select id="select-floor-number" style="height: inherit; width: 100%; padding-left: 10px;">
 							<option value="1">Floor 1</option>
